versions/v2.8/modules/en/pages/cluster-deployment/infra-providers/aws/machine-configuration.adoc
= EC2 Machine Configuration Reference
:revdate: 2024-09-26
:page-revdate: {revdate}

For more details about EC2 nodes, refer to the official documentation for the https://aws.amazon.com/ec2[EC2 Management Console].

== Region

The geographical https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/using-regions-availability-zones.html[region] in which to build your cluster.

== Zone

The https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/using-regions-availability-zones.html#concepts-availability-zones[zone], an isolated location within a region to build your cluster

== Instance Type

The https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/instance-types.html[instance type], which determines the hardware characteristics, used to provision your cluster.

== Root Disk Size

Configure the size (in GB) for your https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/RootDeviceStorage.html[root device].

== VPC/Subnet

The https://docs.aws.amazon.com/vpc/latest/userguide/configure-your-vpc.html[VPC] or specific https://docs.aws.amazon.com/vpc/latest/userguide/configure-subnets.html[subnet], an IP range in your VPC, to add your resources to.

== IAM Instance Profile Name

The name of the https://docs.aws.amazon.com/IAM/latest/UserGuide/id_roles_use_switch-role-ec2_instance-profiles.html[instance profile] used to pass an IAM role to an EC2 instance.

== Advanced Options

=== AMI ID

The https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/AMIs.html[Amazon Machine Image] used for the nodes in your cluster.

=== SSH Username for AMI

The username for connecting to your launched instances. Refer to https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/connection-prereqs.html[here] for the default usernames to selected AMIs. For AMIs not listed, check with the AMI provider.

=== Security Group

Choose the default security group or configure a security group.

Please refer to xref:installation-and-upgrade/requirements/port-requirements.adoc#_rancher_aws_ec2_security_group[Amazon EC2 security group when using Node Driver] to see what rules are created in the `rancher-nodes` Security Group.

=== EBS Root Volume Type

The https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/ebs-volume-types.html[EBS volume type] to use for the root device.

=== Encrypt EBS Volume

Enable https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/EBSEncryption.html[Amazon EBS Encryption].

=== Request Spot Instance

Enable option to https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/spot-requests.html[request spot instances] and specify the maximum instance price per hour you're willing to pay.

=== Use only private address

Enable option on use only https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/using-instance-addressing.html[private addresses].

=== EBS-Optimized Instance

Use an https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/ebs-optimized.html[EBS-optimized instance].

=== Allow access to EC2 metadata

Enable access to https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/ec2-instance-metadata.html[EC2 metadata].

=== Use tokens for metadata

Use https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/configuring-instance-metadata-service.html[Instance Metadata Service Version 2 (IMDSv2)], a token-based method to access metadata.

=== Add Tag

Add metadata using https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/Using_Tags.html[tags] to categorize resources.
